# anda

./: .dockerignore  .env.example  .env.vault  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE.md  README.developers.md  README.md  Rocket.toml  anda-git.spec  anda.hcl  anda.spec  anda.toml  build.rs  bump.rhai  client.dockerfile  clippy.toml  dist  docker-compose.yml  go.work  go.work.sum  justfile  rust-anda-git.spec  rust-anda.spec  rustfmt.toml  test.rhai  wrapper_header.sh
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: common-redhat.sh  docker-redhat.sh
.devcontainer/scripts/: postinstall.sh
.github/: dependabot.yml
.github/scripts/: configure-sccache.js  sccache-stats.js
.github/workflows/: bootstrap.yml  package-git.yml  package-release.yml  package.yml  release-crate.yml  rust-clippy.yml  rust.yml
anda/: Cargo.toml  build.rs
anda-buildkit/: go.mod  go.sum  main.go
anda-config/: Cargo.toml  config.rs  context.rs  error.rs  lib.rs  template.rs
anda-config/src/: config.rs  context.rs  error.rs  lib.rs  template.rs
anda-db-migration/src/: m20220101_000001_create_table.rs
anda-frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json
anda-frontend/pages/: _app.tsx  _document.tsx  callback.tsx  index.tsx  signout.tsx
anda-frontend/src/: App.tsx  main.scss  main.tsx
anda-frontend/src/api/: artifacts.ts  builds.ts  client.ts  projects.ts
anda-frontend/src/components/: ArtifactEntry.tsx  BuildsTable.tsx  Navbar.tsx  Skeleton.tsx
anda-frontend/src/pages/: AuthCallback.tsx  BuildInfo.tsx  Builds.tsx  Explore.tsx  Home.tsx  Landing.tsx  Project.tsx  User.tsx
anda-frontend/src/pages/BuildInfo/: About.tsx  Artifacts.tsx  Logs.tsx
anda-frontend/src/pages/Project/: About.tsx  Artifacts.tsx  Composes.tsx
anda-old/: Cargo.toml
anda-old/src/: api.rs  backend.rs  build.rs  container.rs  error.rs  main.rs  util.rs
anda-server/: Cargo.toml  anda-frontend  api_spec.yaml  build.rs
anda-server/src/: artifacts.rs  auth.rs  backend.rs  builds.rs  cors.rs  db.rs  db_object.rs  kubernetes.rs  main.rs  pkgs.rs  prelude.rs  repos.rs  s3_object.rs  tasks.rs
anda-server/src/api/: artifacts.rs  builds.rs  composes.rs  mod.rs  projects.rs  targets.rs
anda-server/src/entity/: artifact.rs  artifacts.rs  build.rs  builds.rs  compose.rs  composes.rs  mod.rs  prelude.rs  project.rs  projects.rs  target.rs  targets.rs  user.rs  users.rs
anda-server/src/pkgs/: parsing.rs
anda-server/test/imagerepo/: repodata.json
anda-types/: Cargo.toml
anda-types/src/: api.rs  config.rs  error.rs  lib.rs
anda-uris/: Cargo.toml  README.md
anda-uris/src/: forge.rs  lib.rs  tests.rs
anda-uris/src/forge/: github.rs  gitlab.rs  mod.rs  pagure.rs
anda-web/: .gitignore  Cargo.toml  Trunk.toml  build.rs  index.html  index.js
anda-web/src/: artifacts.rs  builds.rs  main.rs  projects.rs
anda-worker/: Cargo.toml  go.mod
anda/.rpm/: anda.spec
anda/src/: anda_build_rpm.sh  api.rs  artifacts.rs  backend.rs  build.rs  build_type.rs  buildctl-daemonless.sh  builder.rs  cli.rs  config.rs  container.rs  error.rs  flatpak.rs  lib.rs  main.rs  oci.rs  repos.rs  rpm_spec.rs  util.rs
anda/tests/: test.yml  umpkg.spec
andax/: Cargo.toml  error.rs  lib.rs  run.rs
andax/fns/: build.rs  cfg.rs  io.rs  kokoro.rs  mod.rs  rpm.rs  tenshi.rs  tsunagu.rs
andax/hints/: gh_token_not_present.txt
andax/src/: build.rs  earth.txt  error.rs  fns.rs  io.rs  lib.rs  run.rs  update.rs
andax/src/fns/: build.rs  cfg.rs  io.rs  kokoro.rs  mod.rs  rpm.rs  tenshi.rs  tsunagu.rs
andax/src/update/: re.rs  rpm.rs  tsunagu.rs
assets/: ddl.sql
libsolv/: Cargo.toml
libsolv/libsolv-bind/: Cargo.toml  build.rs
libsolv/libsolv-bind/include/: wrapper.h
libsolv/libsolv-bind/src/: lib.rs
libsolv/src/: checksum.rs  lib.rs  pool.rs  repo.rs  solv.rs  util.rs
madoguchi/: Cargo.toml  Rocket.toml  rustfmt.toml
madoguchi/migrations/: 20230213103718_initial-tables.sql
madoguchi/src/: db.rs  main.rs  utils.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220721_121335_update_schemas.rs  m20220721_144407_remove_workers.rs  m20220823_084903_project_summary.rs  m20220823_131039_artifact_metadata.rs
postgres/: docker-compose.yml
rpm-parse/: Cargo.toml
rpm-parse/src/: main.rs
rpmspec-rs/: Cargo.toml  rustfmt.toml
rpmspec-rs/src/: changelog.txt  error.rs  lib.rs  lua.rs  parse.rs  parser.py  rpm.pest  rpmio.rs  spec.rs  util.rs  utils.rs
rpmspec-rs/src/lua/: repl.rs
rpmspec-rs/src/parse/: macros.rs
rpmspec-rs/src/rpmio/: error.rs  expression.rs  macros.rs  rpmhook.rs  rpmlua.rs  rpmstring.rs
rpmspec-rs/src/rpmio/rpmlua/: repl.rs
site/: index.html.hbs
src/: artifacts.rs  builder.rs  cli.rs  flatpak.rs  lib.rs  main.rs  oci.rs  pt.rs  repos.rs  rpm_oci.rs  rpm_spec.rs  script.rs  update.rs  util.rs
src/update/: re.rs  rpm.rs  tsunagu.rs
tests/: anda.hcl  hello.sh  org.flatpak.Hello.yml  test.rhai  test.spec  test.yml  umpkg.spec.in
xtask/: Cargo.toml
xtask/src/: main.rs
