# Cargo workspace
[package]
name = "anda"
version = "0.2.2"
edition = "2021"
description = "Andaman Build toolchain"
license = "MIT"
exclude = [
    "anda-build",
    "anda-config",
    "andax",
    ".devcontainer",
    ".github",
    ".flatpak-builder/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive", "env"] }
tracing = { workspace = true }
tracing-subscriber = "0.3"
tracing-log = "0.2.0"
color-eyre = { workspace = true }
walkdir = "2.5.0"
tempfile = "3.10.1"
anda-config = { path = "./anda-config", version = "0.2.0" }
andax = { path = "./andax", version = "0.2.0" }
flatpak = "0.18.1"
clap-verbosity-flag = "2.2.0"
clap_complete = "4.5.8"
tokio = { version = "1.38.1", features = [
    "process",
    "io-util",
    "macros",
    "signal",
    "rt-multi-thread",
] }
async-trait = "0.1.81"
nix = { version = "0.29.0", features = ["signal"], default-features = false }
git2 = "0.19.0"
chrono = { workspace = true }
ignore = { workspace = true }
promptly = "0.3.1"
console = "0.15.8"
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
itertools = "0.13.0"
lazy_format = "2.0.3"
lazy_static = { workspace = true }


[workspace]
members = ["anda-config", "xtask", "andax"]

[workspace.dependencies]
anda-config = { path = "./anda-config", version = "0.2.2" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
lazy_static = "1.5"
regex = "1.10.5"
serde_json = "1.0"
color-eyre = "0.6.3"
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = ["now"] }
ignore = "0.4.22"
