# Cargo workspace
[package]
name = "anda"
version = "0.3.3"
edition = "2021"
description = "Andaman Build toolchain"
license = "MIT"
repository = "https://github.com/FyraLabs/anda"
readme = "README.md"
keywords = ["build", "toolchain", "rpm", "flatpak", "oci"]
exclude = [
    "anda-build",
    "anda-config",
    "andax",
    ".devcontainer",
    ".github",
    ".flatpak-builder/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
tracing-log = "0.2.0"
color-eyre = { workspace = true }
walkdir = "2.5.0"
tempfile = "3.12.0"
anda-config = { workspace = true }
andax = { path = "./andax", version = "0.3.1" }
flatpak = "0.18.1"
clap-verbosity-flag = "2.2.0"
tokio = { version = "1.39.3", features = [
    "process",
    "io-util",
    "macros",
    "signal",
    "rt-multi-thread",
] }
async-trait = "0.1.82"
nix = { version = "0.29.0", features = ["signal"], default-features = false }
git2 = "0.19.0"
chrono = { workspace = true }
ignore = { workspace = true }
promptly = "0.3.1"
console = "0.15.8"
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
itertools = "0.13.0"
lazy_format = "2.0.3"
lazy_static = { workspace = true }


[lints]
workspace = true


[workspace]
members = ["anda-config", "xtask", "andax"]

[workspace.dependencies]
anda-config = { path = "./anda-config", version = "0.3.1" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
lazy_static = "1.5"
regex = "1.10.6"
serde_json = "1.0"
color-eyre = "0.6.3"
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = ["now"] }
ignore = "0.4.22"
clap_complete = "4"
clap = { version = "4", features = ["derive", "env"] }

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

disallowed-macros = "deny"
excessive-nesting = "warn"

arithmetic_side_effects = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
field_scoped_visibility_modifiers = "deny"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
indexing_slicing = "warn"
infinite_loop = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "warn"
multiple_inherent_impl = "warn"
needless_raw_strings = "warn"
rc_buffer = "warn"
rc_mutex = "deny"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "deny"
unimplemented = "warn"
unneeded_field_pattern = "warn"
unwrap_in_result = "warn"
