# Cargo workspace
[package]
name = "anda"
version = "0.4.13"
edition = "2021"
description = "Andaman Build toolchain"
license = "MIT"
repository = "https://github.com/FyraLabs/anda"
readme = "README.md"
keywords = ["build", "toolchain", "rpm", "flatpak", "oci"]
exclude = [
    "anda-build",
    "anda-config",
    "andax",
    ".devcontainer",
    ".github",
    ".flatpak-builder/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
tracing-log = "0.2.0"
color-eyre = { workspace = true }
walkdir = "2.5.0"
tempfile = "3.20.0"
anda-config = { workspace = true }
andax = { path = "./andax", version = "0.4.13" }
flatpak = "0.18.1"
clap-verbosity-flag = "3.0.3"
tokio = { version = "1.47.1", features = [
    "process",
    "io-util",
    "macros",
    "signal",
    "rt-multi-thread",
] }
async-trait = "0.1.88"
nix = { version = "0.30.1", features = ["signal"], default-features = false }
git2 = "0.20.2"
chrono = { workspace = true }
ignore = { workspace = true }
promptly = "0.3.1"
console = "0.16.0"
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
itertools = "0.14.0"
lazy_format = "2.0.3"
lazy_static = { workspace = true }
shell-quote = "0.7.2"


[lints]
workspace = true


[workspace]
members = ["anda-config", "xtask", "andax"]

[patch.crates-io]
rhai = { git = "https://github.com/rhaiscript/rhai", rev = "614a3e73d108bd436a3e063bd8d85ee3f168119a" }

[workspace.dependencies]
anda-config = { path = "./anda-config", version = "0.4.13" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
lazy_static = "1.5"
regex = "1.12.2"
serde_json = "1.0"
color-eyre = "0.6.5"
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = ["now"] }
ignore = "0.4.25"
clap_complete = "4"
clap = { version = "4", features = ["derive", "env"] }
parking_lot = "0.12.5"
hcl-rs = "0.18.5"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

disallowed-macros = "deny"
excessive-nesting = "warn"

arithmetic_side_effects = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
field_scoped_visibility_modifiers = "deny"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
indexing_slicing = "warn"
infinite_loop = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "warn"
multiple_inherent_impl = "warn"
needless_raw_strings = "warn"
rc_buffer = "warn"
rc_mutex = "deny"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "deny"
unimplemented = "warn"
unneeded_field_pattern = "warn"
unwrap_in_result = "warn"
