[package]
name = "anda-config"
description = "Configuration module for Andaman"
version = "0.4.12"
edition = "2021"
license = "MIT"
repository = "https://github.com/FyraLabs/anda"
readme = "../README.md"

[lib]
path = "./lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hcl-rs = { version = "0.15.0" }
dotenv = "0.15.0"
serde = { workspace = true }
tracing = "0.1"
ignore = { workspace = true }
once_cell = { version = "1.20", default-features = false, features = ["std"] }
parking_lot = "0.12.4"
serde_with = "3.12.0"

[dev-dependencies]
env_logger = ">= 0.10, < 0.12"


[lints]
workspace = true
