[package]
name = "anda-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.8.24"
serde_json = "1.0.13"
serde-xml-rs = "0.5.1"
reqwest = "0.11"
xml-rs = "0.8.4"
librsync = "0.2"
