[package]
name = "anda-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.8.24"
serde_json = "1.0.13"
serde-xml-rs = "0.5.1"
serde_derive = "1.0.137"
reqwest = { version = "0.11", features = ["stream"]}
async-compression = { version = "0.3.12", features = ["futures-io", "gzip"] }
futures = "0.3.21"
anyhow = "1.0.58"
sea-orm-rocket = "0.5.0"
async-trait = "0.1.56"
dotenv = "0.15.0"
async-once-cell = "0.4.2"
chrono = "0.4.19"
rust-s3 = "0.31.0"
lazy_static = "1.4.0"

[dependencies.sea-orm]
version = "0.9.0"
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",

]

[build-dependencies]
bindgen = "0.60.1"
