[package]
name = "anda-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
#include = ["anda-frontend", "!node_modules", "dist", "!pnpm", "src", "test"]
exclude = [ "node_modules" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
#serde_yaml = "0.9.9"
serde_json = "1.0.13"
#serde-xml-rs = "0.5.1"
serde_derive = "1.0.137"
reqwest = { version = "0.11", features = ["stream"] }
async-compression = { version = "0.3.12", features = ["futures-io", "gzip"] }
futures = "0.3.21"
anyhow = "1.0.58"
sea-orm-rocket = "0.5.0"
async-trait = "0.1.56"
dotenv = "0.15.0"
async-once-cell = "0.4.2"
chrono = "0.4.19"
lazy_static = "1.4.0"
aws-sdk-s3 = "0.17.0"
# Use walkdir for the folder upload function
# Since S3 automatically creates folders (prefixes), we don't need to recursively upload each folder
walkdir = "2.3.2"
kube = { version = "0.74.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
bytes = "1.2.0"
bitflags = "1.3.2"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
#npm_rs = "0.2.1"
rust-embed = { version = "6.4.0", features = ["interpolate-folder-path"] }
pretty_env_logger = "0.4.0"
tempfile = "3.3.0"
[dependencies.anda-db-migration]
version = "0.1.0"
path = "../migration"

[dependencies.sea-orm]
version = "0.9.0"
features = ["runtime-tokio-rustls", "sqlx-postgres"]

[build-dependencies]
bindgen = "0.60.1"
npm_rs = "0.2.1"

[[bin]]
name = "anda-server"
path = "src/main.rs"
