[package]
name = "anda-types"
description = "Common data types for Andaman"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.1.2", features = ["serde"] }
chrono = { version = "0.4.2", features = ["serde"] }
serde_json = "1.0.13"
anyhow = "1.0.59"
hcl-rs = "0.6.4"
serde = { version = "1.0.137", features = ["derive"] }
log = "~0.4.17"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
