[package]
name = "anda-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
#reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.140"
serde_json = "1.0.82"
async-trait = "0.1.56"
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
wasm-bindgen-futures = "0.4.31"
yew-hooks = "0.1.56"
patternfly-yew = "0.2.0"
reqwasm = "0.5.0"
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
log = "0.4.17"
uuid = { version = "1.1.2", features = ["serde"] }
indexmap = "=1.6.2"

[build-dependencies]
dotenv-build = "0.1"
