[package]
name = "anda"
version = "0.1.0"
edition = "2021"
description = "Andaman Package Manager and frontend"
authors = [
    "Cappy Ishihara <cappy@cappuchino.xyz>",
    "windowsboy111 <wboy111@outlook.com>",
]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
pretty_env_logger = "0.4.0"
log = "~0.4.17"
anyhow = "1.0.59"  # Add macro feature so rust-analyzer finally finds the macros
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.13"
toml = "0.5.9"
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros", "fs", "process"] }
tokio-tar = "0.3.0"
tokio-stream = "0.1.9"
walkdir = "2.3.2"
uuid = { version = "1.1.2", features = ["serde"] }
chrono = { version = "0.4.2", features = ["serde"] }
reqwest = { version = "0.11.11", features = ["multipart", "json", "stream"] }
tabwriter = "1.2.1"  # tabwriter for pretty printing tables
mime_guess = "2.0.4"
proc-macro2 = "1.0.40"
async-compression = { version = "0.3.14", features = ["flate2", "tokio", "gzip"] }
async_zip = { git = "https://github.com/Majored/rs-async-zip.git", branch = "main"}
git2 = "0.15.0"
tempfile = "3.3.0"
ignore = "0.4.18"
indicatif = "0.17.0"
tokio-util = { version = "0.7.3", features = ["compat"] }
futures = "0.3.21"
hcl-rs = "0.6.4"
owo-colors = "3"
execute = "0.2.11"
solvent = "0.8.3"
#crossterm = "0.25.0"
regex = "1.6.0"
buildkit-llb = "0.2.0"
reqwest-eventsource = "0.4.0"
anda-types ={ path = "../anda-types", version = "0.1" }

[package.metadata.generate-rpm]

[[package.metadata.generate-rpm.assets]]
source = "./target/release/anda"
dest = "/usr/bin/anda"
mode = "755"
