[package]
name = "anda"
version = "0.1.0"
edition = "2021"
description = "Andaman Build toolchain"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive", "env"] }
log = "~0.4.17"
anyhow = "1.0.59"
toml = "0.5.9"
walkdir = "2.3.2"
tempfile = "3.3.0"
anda-config = { path = "../anda-config" }