[package]
name = "anda"
version = "0.1.3"
edition = "2021"
description = "Andaman Build toolchain"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive", "env"] }
log = "~0.4.17"
anyhow = "1.0.59"
toml = "0.5.9"
walkdir = "2.3.2"
tempfile = "3.3.0"
anda-config = { path = "../anda-config", version = "0.1.0"}
flatpak = "0.18.1"
clap_mangen = "0.2.2"
clap-verbosity-flag = "1.0.1"
cmd_lib = "1.3.0"
pretty_env_logger = "0.4.0"
tokio = { version = "1.21.2", features = ["full"] }
async-trait = "0.1.57"
nix = "0.25.0"


[build-dependencies]
clap = { version = "3.2", features = ["derive", "env"] }
clap_mangen = "0.1.11"
clap-verbosity-flag = "1.0.1"
anyhow = "1.0.59"
