[package]
name = "andax"
version = "0.4.8"
edition = "2021"
license = "MIT"
description = "Andaman scripting runtime"
repository = "https://github.com/FyraLabs/anda"
readme = "../README.md"

[lib]
path = "./lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
rhai = { version = "1.21.0", features = ["serde", "internals"] }
ureq = { version = "~3", features = ["json"] }
tracing = { workspace = true }
color-eyre = { workspace = true }
smartstring = "1.0.1"
tempfile = "3.15.0"
anda-config = { workspace = true }
rhai-fs = "0.1.2"
rhai-url = "0.0.5"
hcl-rs = "0.15.0"
directories = "6.0.0"
chrono = { workspace = true }

[lints]
workspace = true
