[package]
name = "madoguchi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_postgres"] }
sqlx = { version = "0.5.13", features = [ "runtime-tokio-rustls", "postgres", "chrono", "macros" ] }
