[package]
name = "rpmspec-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
serde = { version = "1.0.145", features = ["derive"] }
regex = "1.6.0"
lazy_static = "1.4.0"
glob = "0.3.0"
tracing = "0.1.37"
color-eyre = "0.6.2"
smartstring = "1.0.1"
rlua = "0.19.4"
base64 = "0.21.0"
rustyline = "10.1.0"
stringreader = "0.1.1"
parking_lot = "0.12.1"
lazy_format = "2.0.0"
