[package]
name = "xtask"
version = "0.2.0"
edition = "2021"

publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap_mangen = "0.2.24"
anda = { path = ".." }
clap = { workspace = true }
anyhow = "1.0.89"
clap_complete = { workspace = true }
