[package]
name = "xtask"
version = "0.2.0"
edition = "2021"

publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap_mangen = "0.3.0"
anda = { path = ".." }
clap = { workspace = true }
anyhow = "1.0.102"
clap_complete = { workspace = true }
